# folio-pdf

./: README.md  pyproject.toml
.github/workflows/: publish-ci.yml
src/folio_pdf/: __init__.py  core.py  document.py  element.py  enums.py  exceptions.py  font.py  heading.py  page.py  paragraph.py  table.py
src/folio_pdf/libs/: folio.h
tests/fixtures/: index.html
tests/test_folio_pdf/: test_document.py  test_folio.py
