[project]
name = "folio-pdf"
version = "0.0.0"
description = "A PDF library for Python powered by bindings to github.com/carlos7ags/folio in GO"
readme = "README.md"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
